<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/main_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#33000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/detail_icon_pad"
            android:padding="@dimen/detail_wallpaper_icon_inner_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/detail_wallpaper_nav_back_size"
                android:layout_height="@dimen/detail_wallpaper_nav_back_size"
                app:srcCompat="@drawable/ic_back"
                app:tint="@color/color_detail_icon" />
        </LinearLayout>

        <!-- Icon holder flow -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/detail_wallpaper_icon_group_margin"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_wallpaper_icon_text_margin"
                    android:background="@drawable/detail_icon_pad"
                    android:padding="@dimen/detail_wallpaper_icon_inner_padding">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/favorite_icon"
                        android:layout_width="@dimen/detail_wallpaper_icon_size"
                        android:layout_height="@dimen/detail_wallpaper_icon_size"
                        app:srcCompat="@drawable/ic_unfavorite" />
                </LinearLayout>

                <TextView
                    android:id="@+id/favorite_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/un_favorite"
                    android:textColor="@color/color_detail_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/detail_wallpaper_icon_group_margin"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_wallpaper_icon_text_margin"
                    android:background="@drawable/detail_icon_pad"
                    android:padding="@dimen/detail_wallpaper_icon_inner_padding">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/detail_wallpaper_icon_size"
                        android:layout_height="@dimen/detail_wallpaper_icon_size"
                        app:srcCompat="@drawable/ic_share"
                        app:tint="@color/color_detail_icon" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textColor="@color/color_detail_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/detail_wallpaper_icon_group_margin"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/wallpaper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_wallpaper_icon_text_margin"
                    android:background="@drawable/detail_icon_pad"
                    android:padding="@dimen/detail_wallpaper_icon_inner_padding">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/detail_wallpaper_icon_size"
                        android:layout_height="@dimen/detail_wallpaper_icon_size"
                        app:srcCompat="@drawable/ic_set_as_wallpaper"
                        app:tint="@color/color_detail_icon" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_as"
                    android:textColor="@color/color_detail_icon" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/circular_progress"
        android:layout_width="@dimen/circular_progress_indicator_size"
        android:layout_height="@dimen/circular_progress_indicator_size"
        android:indeterminateTint="@color/color_primary"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/main_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/no_favorite_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_favorite_text"
        android:textColor="@color/color_network_error_text"
        android:textSize="28sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/main_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <LinearLayout
    android:id="@+id/main_banner"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    tools:layout_height="50dp"
    tools:visibility="visible"
    tools:background="@color/teal_200"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>